Fix ol spacing
Resolves #5

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,10 @@ li {
 	width: 100%;
 }
 
+ol {
+	display: table;
+}
+
 hr {
 width: 100%;
 margin-top: 1em;
